--- a/assets/challenge.css
+++ b/assets/challenge.css
@@ -9,7 +9,7 @@ body {
     /*min-width: 100vw;*/
     background-color: rgb(243, 234, 227);
     display: flex;
-    /*flex-direction: row;*/
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     font-family: Fraunces;
