--- a/assets/challenge.css
+++ b/assets/challenge.css
@@ -105,7 +105,7 @@ body {
 
 .product-price .btn-add .btn-icon {
     display: inline-block;
-    background-image: url("/images/icon-cart.svg");
+    background-image: url("../images/icon-cart.svg");
     background-repeat: no-repeat;
     height: 20px;
     width: 20px;
